--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
 
     <color name="colorBlack">#000000</color>
     <color name="colorWhite">#FFFFFF</color>
-    <color name="colorMain">#375DA7</color>
+    <color name="colorMain">#4673B6</color>
+    <color name="colorFont">#151515</color>
 
 </resources>
