--- a/app/src/main/res/drawable/ic_radius_btn.xml
+++ b/app/src/main/res/drawable/ic_radius_btn.xml
@@ -3,7 +3,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
 android:shape="rectangle" android:padding="5dp" >
 
-    <solid android:color="#FFFFFF" />
+    <solid android:color="@color/colorWhite" />
 
     <corners
         android:bottomRightRadius="25dp"
