--- a/app/src/main/res/layout/content_car.xml
+++ b/app/src/main/res/layout/content_car.xml
@@ -49,7 +49,7 @@
         android:id="@+id/btnCarReserv"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="차량 예약하기"
+        android:text="예약 확인하기"
         android:layout_marginTop="24dp"
         android:background="@drawable/ic_radius_btn"
         app:layout_constraintLeft_toLeftOf="parent"
