--- a/app/src/main/res/layout/content_car_tab_fragment.xml
+++ b/app/src/main/res/layout/content_car_tab_fragment.xml
@@ -4,7 +4,8 @@
     android:id="@+id/carFragmentMain"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:background="@color/colorMain"
+    xmlns:app="http://schemas.android.com/apk/res-auto" >
 
     <TextView
         android:id="@+id/carFragmentLabel"
