--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -34,12 +34,22 @@
         app:layout_constraintTop_toBottomOf="@+id/profileImage" />
 
     <TextView
+        android:id="@+id/profileUniv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="2dp"
+        android:layout_marginLeft="110dp"
+        android:text="강남대학교 |"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/profileTitle" />
+
+    <TextView
         android:id="@+id/profileRole"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="2dp"
-        android:text="강남대학교 | 학생"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="107dp"
+        android:text="도우미 학생"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/profileTitle" />
 
