--- a/app/src/main/res/layout/content_car_alert.xml
+++ b/app/src/main/res/layout/content_car_alert.xml
@@ -44,9 +44,9 @@
             android:textStyle="bold"
             android:textSize="16dp"
             android:layout_marginTop="48dp"
+            android:layout_marginLeft="140dp"
             app:layout_constraintTop_toBottomOf="@+id/carReservInfo_sub_layout"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent" />
+            app:layout_constraintLeft_toLeftOf="parent" />
 
         <TextView
             android:id="@+id/alertReservLocationTitle"
