--- a/app/src/main/res/layout/content_car_reserv_req.xml
+++ b/app/src/main/res/layout/content_car_reserv_req.xml
@@ -1,46 +1,144 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorMain" >
+    android:background="@color/colorMain"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
-        android:id="@+id/textMapSelect"
+        android:id="@+id/locationTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/carReservMap"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="10dp"
-        android:textSize="20dp"
+        android:text="위치 : "
         android:textColor="@color/colorWhite"
-        android:text="지도에서 선택" />
-
-    <com.google.android.gms.maps.MapView
-        android:id="@+id/carReservMap"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
-        android:layout_centerInParent="true" />
+        android:textSize="30dp"
+        android:textStyle="bold"
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="50dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <TextView
-        android:id="@+id/carSelectLocation"
+        android:id="@+id/locationTxt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/carReservMap"
-        android:layout_below="@+id/carReservMap"
-        android:layout_marginTop="29dp"
-        android:background="@color/colorWhite"
-        android:padding="10dp"
-        android:text="건물 선택"
-        android:textSize="12dp" />
+        android:text="샬롬관"
+        android:textColor="@color/colorWhite"
+        android:textSize="30dp"
+        android:textStyle="bold"
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="150dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
-    <Spinner
-        android:id="@+id/spinner"
+    <TextView
+        android:id="@+id/timeTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="일시 : "
+        android:textColor="@color/colorWhite"
+        android:textSize="30dp"
+        android:textStyle="bold"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="50dp"
+        app:layout_constraintTop_toBottomOf="@id/locationTitle"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+    <TextView
+        android:id="@+id/dateTxt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="날짜 선택"
+        android:textColor="@color/colorWhite"
+        android:textSize="30dp"
+        android:textStyle="bold"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="150dp"
+        app:layout_constraintTop_toBottomOf="@id/locationTxt"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+    <TextView
+        android:id="@+id/timeTxt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="시간 선택"
+        android:textColor="@color/colorWhite"
+        android:textSize="30dp"
+        android:textStyle="bold"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="150dp"
+        app:layout_constraintTop_toBottomOf="@id/dateTxt"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+    <TextView
+        android:id="@+id/memoTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="메모"
+        android:textColor="@color/colorWhite"
+        android:textSize="30dp"
+        android:textStyle="bold"
+        android:layout_marginTop="70dp"
+        android:layout_marginLeft="50dp"
+        app:layout_constraintTop_toBottomOf="@id/timeTitle"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+    <EditText
+        android:id="@+id/editMemo"
         android:layout_width="200dp"
-        android:layout_height="36dp"
-        android:layout_alignEnd="@+id/carReservMap"
-        android:layout_alignTop="@+id/carSelectLocation" />
+        android:layout_height="150dp"
+        android:background="@color/colorWhite"
+        android:ems="7"
+        android:inputType="textMultiLine"
+        android:textSize="24dp"
+        android:textStyle="bold"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="120dp"
+        app:layout_constraintTop_toBottomOf="@id/timeTxt"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+    <CheckBox
+        android:id="@+id/checkWheel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="휠체어 있어요"
+        android:textColor="@color/colorWhite"
+        android:textSize="18dp"
+        android:textStyle="bold"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="120dp"
+        app:layout_constraintTop_toBottomOf="@id/editMemo"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
 
-</RelativeLayout>
+    <CheckBox
+        android:id="@+id/checkFriend"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=" 동승자 있어요"
+        android:textColor="@color/colorWhite"
+        android:textSize="18dp"
+        android:textStyle="bold"
+        android:layout_marginTop="0dp"
+        android:layout_marginLeft="120dp"
+        app:layout_constraintTop_toBottomOf="@id/checkWheel"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+    <Button
+        android:id="@+id/btnCarReservSubmit"
+        android:layout_width="280dp"
+        android:layout_height="wrap_content"
+        android:text="차량 예약"
+        android:textColor="@color/colorMain"
+        android:textSize="28dp"
+        android:textStyle="bold"
+        android:background="@color/colorWhite"
+        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toBottomOf="@id/checkFriend"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+
+
+</android.support.constraint.ConstraintLayout>
