--- a/app/src/main/res/layout/content_car_tab_list.xml
+++ b/app/src/main/res/layout/content_car_tab_list.xml
@@ -6,19 +6,6 @@
     android:background="@color/colorMain"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <Button
-        android:id="@+id/btnCarReservReq"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="예약 신청하기"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/ic_radius_btn"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintDimensionRatio="6:1"
-        style="?android:attr/borderlessButtonStyle" />
-
     <LinearLayout
         android:id="@+id/carListTable"
         android:paddingLeft="0dp"
@@ -33,7 +20,7 @@
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
         android:background="@color/colorMustad"
-        app:layout_constraintTop_toBottomOf="@+id/btnCarReservReq" >
+        app:layout_constraintTop_toTopOf="parent" >
 
         <TextView
             android:id="@+id/carReservName"
@@ -85,7 +72,7 @@
         android:id="@+id/carListRecycler"
         android:scrollbars="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="320dp"
         android:layout_marginTop="5dp"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
@@ -93,5 +80,19 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/carListTable" />
+
+
+    <Button
+        android:id="@+id/btnCarReservReq"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="예약 신청하기"
+        android:layout_marginTop="18dp"
+        android:background="@drawable/ic_radius_btn"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/carListRecycler"
+        app:layout_constraintDimensionRatio="6:1"
+        style="?android:attr/borderlessButtonStyle" />
 
 </android.support.constraint.ConstraintLayout>
