--- a/app/src/main/res/layout/content_car_tab_main.xml
+++ b/app/src/main/res/layout/content_car_tab_main.xml
@@ -2,6 +2,7 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/carTabMain"
+    android:background="@color/colorMain"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true">
@@ -42,7 +43,21 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="350dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+
+    <RelativeLayout
+        android:id="@+id/footer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+
+        <Button
+            android:id="@+id/btnCarReservReq"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="예약 신청하기"
+            android:background="@drawable/ic_rectangle_btn" />
+
+    </RelativeLayout>
 
 </android.support.design.widget.CoordinatorLayout>
